--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "classnames": "^2.2.5",
     "font-awesome": "^4.7.0",
+    "jquery": "^1.9.1",
     "lodash": "^4.17.10",
-    "react": "^16.4.0",
+    "react": "^16.8.6",
     "react-autobind": "^1.0.6",
-    "react-bootstrap": "^0.32.1",
-    "react-dom": "^16.4.0",
+    "react-bootstrap": "^1.0.0-beta.8",
+    "react-dom": "^16.8.6",
     "react-fontawesome": "^1.6.1",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
